src/assets/scss/allComponent.scss
/* ... */
// Desable in configure print setting
.Preview-color-icon {
  .icon-Preview {
    color: $theme;
  }
  .disable-preview {
    position: relative;
    color: #a1a1a1;
    &:after {
      position: absolute;
      content: "";
      left: 11px;
      top: -2px;
      height: 25px;
      width: 1.5px;
      background-color: #a1a1a1;
      transform: rotate(25deg);
    }
  }
  span {
    font-family: "roboto" !important;
    font-weight: 500;
  }
}
.tutorial-thumb {
  img {
    width: 117px;
    height: 80px;
    border-radius: 8px;
  }
}

.gc-measurements-wrapper {
  display: flex;

  .gc-measurements-wrap-body {
    &:first-child {
      .gc-measurements-head {
        border-bottom-left-radius: 10px;
        border-top-left-radius: 10px;
      }
    }

    &:last-child {
      .gc-measurements-head {
        border-bottom-right-radius: 10px;
        border-top-right-radius: 10px;
      }
    }

    &.gc-measurements-parent-width {
      div {
        width: 140px;
      }
    }

    &.gc-measurements-child-width {
      div {
        width: 200px;
      }
    }
  }

  .gc-measurements-row {
    height: 70px;
    font-size: 16px;
    font-weight: 500;
    letter-spacing: 0.1px;

    .ant-input-group-wrapper {
      width: 160px;

      .ant-input-group-addon {
        font-size: 14px;
        font-weight: 500;
        letter-spacing: 0.1px;
      }
    }

    i {
      opacity: 0.8;
      font-size: 20px;
    }

    &.gc-measurements-row-60 {
      height: 60px;
    }

    &.gc-measurements-row-40 {
      height: 40px;
    }
  }

  .gc-measurements-head {
    width: 100%;
    background-color: $drawerHeaderColor;
    height: 40px;
    padding: 0 8px;
    display: flex;
    align-items: center;
    font-size: 14px;
    font-weight: 600;
  }
}

// Gynec page's style
.gynec-notes {
  div {
    width: 90% !important;
    height: 100% !important;
  }
  button {
    width: 10% !important;
    height: 100% !important;
    color: #4b4ad5 !important;
    span {
      color: #4b4ad5 !important;
    }
  }
}

.gynec-history-list .text-history {
  width: 44%;
  word-break: break-word;
  align-content: center;
  &.fs-13 {
    font-size: 12px;
  }
  &.t-bold {
    font-weight: 600;
  }
}

.gynec-history-list .semicolon {
  width: 2%;
}

// Rx Digitisation style

.cvt-info {
  display: flex;
  padding: 0.5rem 1.25rem;
  align-items: center;
  border-radius: 0rem 0rem 0.375rem 0.375rem;
  background: #fef4e6;
}

.cvt-info-text {
  color: #44444f;
  font-family: Roboto;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.625rem;
  letter-spacing: 0.00625rem;
}
.digital-rx-info {
  display: flex;
  padding: 0.5rem 14.5px;
  justify-content: space-between;
  align-items: center;
  border: 1px solid #e2e2ea;
  border-radius: 0rem 0rem 1.375rem 1.375rem;
  background: #fef4e6;
  position: absolute;
  z-index: 2;
  gap: 12px;
  margin-top: -2.2%;
}

.digital-rx-info-text {
  font-size: 0.8rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.625rem;
  letter-spacing: 0.00625rem;
}

.digitise-container {
  display: flex;
  flex-direction: column;
  border-radius: 21.046px;
  border: 3.508px solid #9c68c4;
  background: #222;
}

.digitise-box-top {
  display: flex;
  width: 270px;
  align-items: flex-start;
  gap: 10px;
}
.digitise-header {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  color: #fff !important;
  margin: 0;
}

.digitise-info {
  color: rgba(255, 255, 255, 0.7) !important;
  font-style: normal;
  font-weight: 400;
  line-height: 18px;
  margin: 0;
  margin-bottom: 1.5rem;
}

.digitise-btn {
  display: flex;
  height: 40px;
  justify-content: center;
  align-items: center;
  gap: 4px;
  border: 1px solid #fff;
  border-radius: 7.665px;
  background: #fff;
}

.digitised-container {
  padding: 20px;
  gap: 10px;
  flex: 1 0 0;
}

.title-digitise-section {
  font-family: Poppins;
  color: black !important;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px; /* 150% */
  letter-spacing: 0.1px;
}

.digitised-section,
.digitised-section-rx {
  display: flex;
  padding: 16px;
  align-items: center;
  gap: 10px;
  align-self: stretch;
  border-radius: 10px;
  border: 1px solid var(--T-Text-10, #e2e2ea);
  margin-bottom: 1.5rem;

  .no-bullets {
    padding: 0.3rem 0 0 0;

    .btn-outline-digitise {
      background-color: white;
      color: #4b4ad5;
      border-radius: 0.5rem;
      padding: 0.4rem 1rem;
      font-size: 14px;
      border: 1px solid #4b4ad5;
      margin: 0.5rem 1rem 0.3rem 1rem;
    }
  }

  ul {
    padding-left: 1rem;
    margin: 0;

    &.no-bullets li {
      list-style-type: none;
      padding: 0.2rem 1rem;
      font-size: 15px;
      font-weight: 600;
      li:hover {
        color: #ba7de9;
      }
    }

    &.no-bullets li:hover {
      color: #ba7de9 !important;
    }

    li {
      cursor: pointer;
      font-size: 16px !important;
      margin: 6px 0px;
      color: #454551 !important;
      span {
        color: #454551 !important;
      }
    }
    li:hover {
      color: #ba7de9;
      background: #f5f5f5;
    }
  }
}
.digitised-section {
  background: #fcfcfc;
}

.digitised-section-rx {
  background: #fff;
}
/* ... */

